@@ -1,5 +1,6 @@
-// Generated by Flexc++ V0.8.0 on Thu, 04 Aug 2011 06:27:53 +0200
+// Generated by Flexc++ V0.8.0 on Thu, 29 Dec 2011 23:21:34 +0100
 
+#include <iostream>
 #include <fstream>
 #include <sstream>
 #include <stdexcept>
@@ -1478,75 +1479,67 @@ int const ScannerBase::s_dfa__[][79] =
          -1,78,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  121,121},  // 79
     // patterntxt
-    {-1, 1, 2, 3, 3, 1, 3, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,-1,-1,  121,121},  // 0
-    {-1, 1,-1,-1,-1, 1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  121,122},  // 1
+    {-1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,-1,  121,122},  // 0
+    {-1, 1,-1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,
+          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,-1,  122,123},  // 1
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  122,123},  // 2
-    {-1,-1,-1, 3, 3,-1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,-1,-1,  123,124},  // 3
-    {-1,-1,-1, 3, 3,-1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,
-          3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,-1,-1,  124,125},  // 4
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  123,124},  // 2
     // option
     {-1, 1, 2, 2, 2, 1, 2, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 4,
           5, 6, 6, 2, 2, 2, 7, 2, 2, 2, 8, 8, 8, 8, 8, 8, 8, 8, 8, 2,
           2, 2, 2, 8, 2, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8,
-          8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 2, 2, 2, 2, 2,-1,  125,125},  // 0
+          8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 2, 2, 2, 2, 2,-1,  124,124},  // 0
     {-1, 1,-1,-1,-1, 1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 9,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  125,126},  // 1
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  124,125},  // 1
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  126,127},  // 2
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  125,126},  // 2
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  127,128},  // 3
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  126,127},  // 3
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,10,-1,-1,-1,-1,11,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  128,129},  // 4
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  127,128},  // 4
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  129,130},  // 5
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  128,129},  // 5
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
           6, 6, 6,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  130,131},  // 6
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  129,130},  // 6
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  131,132},  // 7
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  130,131},  // 7
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1, 8,-1,-1,
           8, 8, 8,-1,-1,-1,-1,-1,-1,-1, 8, 8, 8, 8, 8, 8, 8, 8, 8,-1,
          -1,-1,-1, 8,-1, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8,
-          8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8,-1,-1,-1,-1,-1,-1,  132,133},  // 8
+          8, 8, 8, 8, 8, 8, 8, 8, 8, 8, 8,-1,-1,-1,-1,-1,-1,  131,132},  // 8
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,11,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  133,133},  // 9
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  132,132},  // 9
     {-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
          -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,
-         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  133,134},  // 10
+         -1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,-1,  132,133},  // 10
     {-1,11,-1,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,
          11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,
          11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,
-         11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,-1,  134,135},  // 11
+         11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,11,-1,  133,134},  // 11
 };
 
     // The first value is the rule index
@@ -1560,37 +1553,37 @@ size_t const ScannerBase::s_rfc__[][3] =
 //     R  F  C
      {26, 1, 0},  // 0
      { 1, 1, 0},  // 1
-     {70, 1, 0},  // 2
+     {68, 1, 0},  // 2
      { 3, 1, 0},  // 3
-     {70, 1, 0},  // 4
+     {68, 1, 0},  // 4
      { 6, 1, 0},  // 5
      { 6, 1, 0},  // 6
      { 9, 1, 0},  // 7
-     {70, 1, 0},  // 8
+     {68, 1, 0},  // 8
      { 5, 1, 0},  // 9
      { 0, 1, 0},  // 10
      { 2, 1, 0},  // 11
      {24, 1, 0},  // 12
      {25, 1, 0},  // 13
-     {69, 1, 0},  // 14
-     {68, 1, 0},  // 15
+     {67, 1, 0},  // 14
+     {66, 1, 0},  // 15
      { 9, 1, 0},  // 16
      { 4, 1, 0},  // 17
      { 4, 1, 0},  // 18
      { 4, 1, 0},  // 19
-     {68, 1, 0},  // 20
-     {68, 1, 0},  // 21
-     {68, 1, 0},  // 22
-     {68, 1, 0},  // 23
+     {66, 1, 0},  // 20
+     {66, 1, 0},  // 21
+     {66, 1, 0},  // 22
+     {66, 1, 0},  // 23
      {13, 1, 0},  // 24
-     {68, 1, 0},  // 25
-     {68, 1, 0},  // 26
-     {68, 1, 0},  // 27
+     {66, 1, 0},  // 25
+     {66, 1, 0},  // 26
+     {66, 1, 0},  // 27
      {21, 1, 0},  // 28
-     {68, 1, 0},  // 29
+     {66, 1, 0},  // 29
      {22, 1, 0},  // 30
      { 7, 9, 0},  // 31
-     {68, 1, 0},  // 32
+     {66, 1, 0},  // 32
      {12, 1, 0},  // 33
      {20, 1, 0},  // 34
      {14, 1, 0},  // 35
@@ -1605,54 +1598,54 @@ size_t const ScannerBase::s_rfc__[][3] =
      {58, 1, 0},  // 44
      {59, 1, 0},  // 45
      {59, 1, 0},  // 46
-     {69, 1, 0},  // 47
+     {67, 1, 0},  // 47
      {56, 1, 0},  // 48
      {57, 1, 0},  // 49
      {55, 1, 0},  // 50
      {56, 1, 0},  // 51
      {27, 1, 0},  // 52
      { 1, 1, 0},  // 53
-     {70, 1, 0},  // 54
+     {68, 1, 0},  // 54
      { 3, 1, 0},  // 55
      {33, 4, 0},  // 56
      {34, 1, 0},  // 57
-     {70, 1, 0},  // 58
+     {68, 1, 0},  // 58
      { 6, 1, 0},  // 59
      { 6, 1, 0},  // 60
      { 8, 1, 0},  // 61
      { 8, 1, 0},  // 62
      { 6, 1, 0},  // 63
      {29, 1, 0},  // 64
-     {70, 1, 0},  // 65
+     {68, 1, 0},  // 65
      { 5, 1, 0},  // 66
      { 6, 1, 0},  // 67
      { 0, 1, 0},  // 68
      {33, 3, 0},  // 69
      { 2, 1, 0},  // 70
-     {69, 1, 0},  // 71
-     {68, 1, 0},  // 72
+     {67, 1, 0},  // 71
+     {66, 1, 0},  // 72
      {29, 1, 0},  // 73
      {28, 1, 0},  // 74
      { 4, 1, 0},  // 75
      { 4, 1, 0},  // 76
      { 4, 1, 0},  // 77
-     {68, 1, 0},  // 78
-     {68, 1, 0},  // 79
+     {66, 1, 0},  // 78
+     {66, 1, 0},  // 79
      {29, 1, 0},  // 80
      {28, 1, 0},  // 81
      {30, 1, 0},  // 82
      {31, 1, 0},  // 83
      {32, 1, 0},  // 84
-     {68, 1, 0},  // 85
+     {66, 1, 0},  // 85
      {28, 1, 0},  // 86
-     {68, 1, 0},  // 87
-     {68, 1, 0},  // 88
-     {68, 1, 0},  // 89
+     {66, 1, 0},  // 87
+     {66, 1, 0},  // 88
+     {66, 1, 0},  // 89
      {35, 1, 0},  // 90
-     {68, 1, 0},  // 91
-     {68, 1, 0},  // 92
+     {66, 1, 0},  // 91
+     {66, 1, 0},  // 92
      { 7, 9, 0},  // 93
-     {68, 1, 0},  // 94
+     {66, 1, 0},  // 94
      {36, 1, 0},  // 95
      {37, 1, 0},  // 96
      {44, 1, 0},  // 97
@@ -1663,7 +1656,7 @@ size_t const ScannerBase::s_rfc__[][3] =
      {38, 1, 0},  // 102
      {39, 1, 0},  // 103
      {40, 1, 0},  // 104
-     {68, 1, 0},  // 105
+     {66, 1, 0},  // 105
      {43, 1, 0},  // 106
      {53, 1, 0},  // 107
      {54, 1, 0},  // 108
@@ -1672,27 +1665,26 @@ size_t const ScannerBase::s_rfc__[][3] =
      {46, 1, 0},  // 111
      {46, 1, 0},  // 112
      {45, 1, 0},  // 113
-     {70, 1, 0},  // 114
+     {68, 1, 0},  // 114
      {63, 1, 0},  // 115
-     {70, 1, 0},  // 116
-     {70, 1, 0},  // 117
+     {68, 1, 0},  // 116
+     {68, 1, 0},  // 117
      {62, 1, 0},  // 118
      {61, 1, 0},  // 119
      {60, 1, 0},  // 120
      {64, 1, 0},  // 121
-     {65, 1, 0},  // 122
-     {67, 1, 0},  // 123
-     {66, 1, 0},  // 124
-     {47, 1, 0},  // 125
-     {51, 1, 0},  // 126
-     {48, 1, 0},  // 127
-     {51, 1, 0},  // 128
+     {64, 1, 0},  // 122
+     {65, 1, 0},  // 123
+     {47, 1, 0},  // 124
+     {51, 1, 0},  // 125
+     {48, 1, 0},  // 126
+     {51, 1, 0},  // 127
+     { 8, 1, 0},  // 128
      { 8, 1, 0},  // 129
-     { 8, 1, 0},  // 130
-     {49, 1, 0},  // 131
-     {50, 1, 0},  // 132
-     {69, 1, 0},  // 133
-     {68, 1, 0},  // 134
+     {49, 1, 0},  // 130
+     {50, 1, 0},  // 131
+     {67, 1, 0},  // 132
+     {66, 1, 0},  // 133
 };
 
 int const (*ScannerBase::s_dfaBase__[])[79] =
@@ -1706,7 +1698,7 @@ int const (*ScannerBase::s_dfaBase__[])[79] =
     s_dfa__ + 274,
     s_dfa__ + 278,
     s_dfa__ + 358,
-    s_dfa__ + 363,
+    s_dfa__ + 361,
 };
 
 size_t ScannerBase::s_istreamNr = 0;
@@ -1777,7 +1769,7 @@ ScannerBase::ScannerBase(std::istream &in, std::ostream &out)
     d_out(new std::ostream(out.rdbuf())),
     d_sawEOF(false),
     d_atBOL(true),
-    d_tailCount(71, UINT_MAX),
+    d_tailCount(69, UINT_MAX),
     d_input(new std::istream(in.rdbuf())),
     d_dfaBase__(s_dfa__)
 {}
@@ -1788,12 +1780,12 @@ ScannerBase::ScannerBase(std::string const &infilename, std::string const &outfi
     d_startCondition(StartCondition__::INITIAL),
     d_state(0),
     d_out(outfilename == "-" ? 
-                new std::ostream(cout.rdbuf())
+                new std::ostream(std::cout.rdbuf())
             :
                 new std::ofstream(outfilename)),
     d_sawEOF(false),
     d_atBOL(true),
-    d_tailCount(71, UINT_MAX),
+    d_tailCount(69, UINT_MAX),
     d_input(new std::ifstream(infilename)),
     d_dfaBase__(s_dfa__)
 {}
@@ -2502,37 +2494,22 @@ int Scanner::executeAction__(size_t ruleIdx)
         case 64:
         {
 #line 2 "inc/patterntxt"
-            return Parser::WS;
+            return Parser::STRING;
         }
         break;
         case 65:
         {
-#line 4 "inc/patterntxt"
+#line 3 "inc/patterntxt"
             return '\n';
         }
         break;
-        case 66:
-        {
-#line 6 "inc/patterntxt"
-            {
-         more();
-         begin(StartCondition__::str);
-         }
-        }
-        break;
         case 67:
-        {
-#line 11 "inc/patterntxt"
-            return Parser::STRING;
-        }
-        break;
-        case 69:
         {
 #line 3 "inc/postcommon"
             begin(StartCondition__::comment);
         }
         break;
-        case 70:
+        case 68:
         {
 #line 5 "inc/postcommon"
             return Parser::CHARACTER;
