@@ -1,4 +1,4 @@
-// Generated by Flexc++ V0.8.0~pre on Mon, 11 Jul 2011 10:54:15 +0200
+// Generated by Flexc++ V0.8.0 on Thu, 29 Dec 2011 23:21:34 +0100
 
 #ifndef ScannerBASE_H_INCLUDED
 #define ScannerBASE_H_INCLUDED
@@ -90,7 +90,7 @@ private:
             Input();
             Input(std::istream *iStream);   // iStream: dynamically allocated
             size_t get();                   // the next range
-            void reRead(size_t ch);         // push back 'ch' (if <= 0x100)
+            void reRead(size_t ch);         // push back 'ch' (if < 0x100)
                                             // push back str from idx 'fmIdx'
             void reRead(std::string const &str, size_t fmIdx);
             size_t lineNr() const
@@ -147,7 +147,7 @@ protected:
     enum: size_t {
         s_rangeOfEOF__           = 76,
         s_finacIdx__             = 77,
-        s_nRules__               = 71,
+        s_nRules__               = 69,
         s_maxSizeofStreamStack__ = 10
     };
     static size_t  const s_ranges__[];
